<resources>
    <string name="app_name">Ascend</string>
    <string name="main_title">Ascend</string>
    <string name="profile_title">Profile</string>
    <string name="your_account">Your Account is blocked</string>
    <string name="password_sent">Password Sent</string>
    <string name="please_chec">Please, check your SMS box and follow the instructions to complete the reset password.</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="code">Code</string>
    <string name="error_password">The password should contain at least 1 number, 1 latin letter, from 6 till 48 symbols.</string>
    <string name="error_password_confirm">Passwords don\’t match</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="title_error">Error</string>
    <string name="home">Home</string>
    <string name="courses">Courses</string>
    <string name="ascension_plan">Community Feed</string>
    <string name="profile">Profile</string>
    <string name="empty"> </string>
    <string name="daily">Daily</string>
    <string name="webinars">Livestream</string>
    <string name="groups">Groups</string>
    <string name="posts">Posts</string>
    <string name="collaboration">Collaboration</string>
    <string name="coaching">Coaching</string>
    <string name="master_mind">Workshops</string>
    <string name="master_mind_group">MasterMind Group</string>
    <string name="support_group">Support Group</string>
    <string name="support_private">Private</string>
    <string name="support_group_type">// %s</string>
    <string name="placeholder_text"><b>Oops!</b>\n There is no data to display.</string>
    <string name="my_daily_gr">My Daily Groups List</string>
    <string name="following">Following</string>
    <string name="all_masterm">All MasterMinds</string>
    <string name="join_group">Join group</string>
    <string name="explore_fro">Explore from the great list of groups. Find those that are of interest to you personally.\nJoin and enjoy!</string>
    <string name="add_master_mind">Add\nMasterMind</string>
    <string name="create_by">by %s</string>
    <string name="filter_groups">Filter Groups</string>
    <string name="select_days_of_week">Select Days of Week</string>
    <string name="preferred_time">Preferred Time</string>
    <string name="group_type">Group type</string>
    <string name="group">Group Coaching</string>
    <string name="workshop">Workshop</string>
    <string name="individual"> Private coaching</string>
    <string name="closed_group"> Closed</string>
    <string name="undefined">Undefined</string>
    <string name="apply">Apply</string>
    <string name="to">to</string>
    <string name="create_group">Create Group</string>
    <string name="create_support_group">Create Support Group</string>
    <string name="create_mm_group">Create MM Group</string>
    <string name="create_create">Create</string>
    <string name="action_mm_group">%s MM Group</string>
    <string name="action_group">%s %s</string>
    <string name="action_webinar">%s Livestream</string>
    <string name="private_group">Private %s</string>
    <string name="public_group">Public %s</string>
    <string name="public_group_title">Public group</string>
    <string name="private_group_title">Private group</string>
    <string name="public_collaboration_title">Public collaboration</string>
    <string name="private_collaboration_title">Private collaboration</string>
    <string name="group_name">%s Name</string>
    <string name="group_title">Group</string>
    <string name="meeting_format">Meeting Format</string>
    <string name="tags">Tags</string>
    <string name="tag">Tag</string>
    <string name="choose_schedule">Choose Schedule</string>
    <string name="number_of_meetings">Number Of Meetings</string>
    <string name="start_date">Start Date</string>
    <string name="price">Price</string>
    <string name="group_description">Group Description</string>
    <string name="upload_group_image">Upload %s Image</string>
    <string name="reservation">Reservation a seat</string>
    <string name="create">Create</string>
    <string name="input_error">Input Error</string>
    <string name="allow_number_digits">0123456789</string>
    <string name="allow_date_digits">0123456789-</string>
    <string name="allow_email_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@.</string>
    <string name="allow_description_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-_ .</string>
    <string name="allow_reason_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-_ .</string>
    <string name="reserved_person_email">Reserved Person Email</string>
    <string name="error_group_name">Please, enter the Group Name correctly</string>
    <string name="error_start_date">The Start date cannot be past. Please check.</string>
    <string name="error_start_time">The Start date cannot be past. Please check.</string>
    <string name="error_price">The Price can contain from 1 till 6 digits</string>
    <string name="error_email">The email is incorrect. Please, make sure you entered correct data</string>
    <string name="error_number_of_meetings">The Number Of Meetings should be between 1 and 365</string>
    <string name="error_number_of_meetings_count">Schedule does not match the number of meetings</string>
    <string name="error_description">The Group Description from 2 till 500 symbols</string>
    <string name="error_description_webinar">The Livestream Description from 2 till 500 symbols</string>
    <string name="error_theme">Please, enter the Livestream Theme correctly</string>
    <string name="error_time">Please, enter days correctly</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_cancel_spaced">Cancel&#160;&#160;</string>
    <string name="btn_complete">Complete</string>
    <string name="btn_done">Done</string>
    <string name="btn_chat">Chat</string>
    <string name="btn_save_action">Save</string>
    <plurals name="x_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="x_comments">
        <item quantity="one">%d Comment</item>
        <item quantity="other">%d Comments</item>
    </plurals>
    <plurals name="x_likes">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <string name="duration_hours">Duration</string>
    <string-array name="meeting_formats">
        <item>Meeting Format</item>
        <item>Speaker Discussion</item>
        <item>Speaker Panel</item>
        <item>Topic Discussion</item>
        <item>Group Discussion</item>
    </string-array>
    <string-array name="meeting_duration_array">
        <item>Duration</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
        <item>5 hours</item>
        <item>6 hours</item>
        <item>7 hours</item>
        <item>8 hours</item>
    </string-array>
    <string-array name="support_meeting_duration_array">
        <item>Duration</item>
        <item>1 hour</item>
        <item>1h 15min</item>
        <item>1h 30min</item>
        <item>1h 45min</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
        <item>5 hours</item>
        <item>6 hours</item>
        <item>7 hours</item>
        <item>8 hours</item>
    </string-array>
    <string-array name="duration_array">
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
    </string-array>
    <string-array name="tags_array">
        <item>Tags</item>
        <item>Power of the minds</item>
        <item>Spiritual</item>
        <item>Kids</item>
        <item>Animals</item>
        <item>Smart Recovery</item>
        <item>Refused Recovery</item>
        <item>Celebrate Recovery</item>
        <item>3 Principals</item>
    </string-array>
    <string name="sign_out">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="webinar_group_title">Livestream</string>
    <string name="webinar_group_description">This Livestream groups is an online meeting or presentation held via the Internet in real time</string>
    <string name="support_group_title">Support Group</string>
    <string name="support_group_description">Provide an opportunity for people to share personal experiences, feelings and helps people who are going through or have gone through similar experiences</string>
    <string name="mastermind_group_title">MasterMind Group</string>
    <string name="mastermind_group_description">Offer a combination of brainstorming, education, peer accountability and support in a group setting to sharpen your business and personal skills</string>
    <string name="logged_social">You\'re logged in via %s</string>
    <string name="su">Su</string>
    <string name="mo">Mo</string>
    <string name="tu">Tu</string>
    <string name="we">We</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="ok">OK</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="join_to_discussion">Join to discussion</string>
    <string name="join_to_livestream">Join to livestream</string>
    <string name="start_group">Start group</string>
    <string name="start_webinar">Start Livestream</string>
    <string name="ended_group">Group Ended</string>
    <string name="ended_webinar">Livestream Ended</string>
    <string name="my_daily_group_list">My Daily Groups List</string>
    <string name="group_list">Groups List</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="type_mastermind">MasterMind Coach</string>
    <string name="type_regular_user">Regular User</string>
    <string name="search_title">Search</string>
    <string name="masterminds">MasterMinds</string>
    <string name="see_groups">See Groups (%d)</string>
    <string name="meetings_count">&lt;b>%d/%d&lt;/b> Meetings</string>
    <string name="meetings_count_with_theme">%d/%d %s</string>
    <string name="group_price">&lt;b>%.2f&lt;/b> USD</string>
    <string name="subscribe">ATTEND</string>
    <string name="today_tasks">Today Tasks</string>
    <string name="weekly_tasks">Weekly Tasks</string>
    <string name="monthly_tasks">Monthly Tasks</string>
    <string name="date_range">Date-Range</string>
    <string name="steps">Steps</string>
    <string name="all_tasks">All</string>
    <string name="spiritual_action_steps">Spiritual Action Steps</string>
    <string name="goals_lists">Goals Lists</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">.</string>
</resources>