<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tvDateRange"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/date_range"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeBarrier" />

    <RadioGroup
        android:id="@+id/rgDateRange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvParticipantsNumber">

        <RadioButton
            android:id="@+id/radioDate0"
            android:layout_width="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_height="30dp"
            android:background="@drawable/pref_time_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/today_tasks"
            android:textColor="@color/pref_time_text_selector" />

        <RadioButton
            android:id="@+id/radioDate1"
            android:layout_width="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/pref_time_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/weekly_tasks"
            android:textColor="@color/pref_time_text_selector" />

        <RadioButton
            android:id="@+id/radioDate2"
            android:layout_width="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/pref_time_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/monthly_tasks"
            android:textColor="@color/pref_time_text_selector" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvSteps"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/steps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeBarrier" />

    <RadioGroup
        android:id="@+id/rgSteps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvParticipantsNumber">

        <RadioButton
            android:id="@+id/radioStep0"
            android:layout_width="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_height="30dp"
            android:background="@drawable/pref_time_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/all_tasks"
            android:textColor="@color/pref_time_text_selector" />

        <RadioButton
            android:id="@+id/radioStep1"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@drawable/action_steps_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/spiritual_action_steps"
            android:textColor="@color/action_steps_text_selector" />

        <RadioButton
            android:id="@+id/radioStep2"
            android:layout_width="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/goal_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/goals_lists"
            android:textColor="@color/goal_text_selector" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_weight="1"
            android:id="@+id/btnSubscribed"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/ic_bg_btn_joined"
            android:enabled="false"
            android:layout_marginEnd="2dp"
            android:text="@string/btn_cancel"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@id/brMaster" />

        <Button
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/btnSubscribe"
            style="@style/AppTheme.Button"
            android:layout_marginTop="18dp"
            android:text="@string/apply"
            app:layout_constraintTop_toBottomOf="@id/brMaster" />
    </LinearLayout>
</LinearLayout>